# lez-framework

./: Cargo.toml
lez-cli/src/: init.rs  lib.rs  tx.rs
lez-client-gen/: Cargo.toml  README.md
lez-client-gen/src/: codegen.rs  ffi_codegen.rs  lib.rs  main.rs  tests.rs  util.rs
skills/spel/: SKILL.md
skills/spel/references/: cli-ref.md  gotchas.md  quickstart.md
