[package]
name = "lez-client-gen"
version = "0.1.0"
edition = "2021"
description = "Generate typed Rust client and C FFI bindings from LEZ program IDL"
license = "MIT"

[dependencies]
lez-framework-core = { path = "../lez-framework-core" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1"
